--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Job Portal</title>
+    <title>Toy Land</title>
   </head>
   <body>
     <div id="root"></div>
